# hackathon2025tbank_backend

./: .env_template  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: validation.yml
core/: config.py
src/db/: connection.py  models.py
src/models/: main.py
src/repositories/: graph.py
src/routers/: base_router.py
src/routers/v1/: .gitkeep  dock_router.py  graph_router.py
src/scripts/: minio_client.py
src/shemas/: graph_shema.py  route_shema.py
